tests/paczka1/fuzzy1/81266800.err
Error in line 2: HqdeYMKO S3 14,4
Error in line 7: HqdeYMKO A906 38,1
Error in line 13: fFdoEIpc S3 31,7
Error in line 1: iQHPyqjD A906 65,3
Error in line 17: fFdoEIpc A906 67,4
Error in line 21: iQHPyqjD S11 3,7
Error in line 31: S3 S11 87,9
Error in line 32: S3 A906 69,0
Error in line 36: S3 A906 149,0
